src/test/deca/context/invalid/operations/arithmetic/invalid_arithmetic_op_plus_string_string.deca
// Description:
//    test invalid operation PLUS between string and string
//    Test rule 3.33
//
// [Begin Result]
//invalid_arithmetic_op_plus_string_string.deca:13:14: Unsupported operation '+' between types string and string. Operation '+' supported only between integer(s) and(or) float(s). (Rule 3.33)
// [End Result]
//
// Historique:
//    cree le 02/01/2025

{
    print("4" + "5");
}